Modifica per rendere possibile il posizionamento del db su un percorso a scelta. Creato un pannello impostazioni per modificare il path e il nome del file

--- a/MercaQuiz/MercaQuiz.csproj
+++ b/MercaQuiz/MercaQuiz.csproj
@@ -89,6 +89,9 @@
 	  <MauiXaml Update="MVVM\Views\QuizPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="MVVM\Views\SettingsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
